[project]
name = "birefnet"
version = "0.1.0"

[tool.poetry]
name = "birefnet"
version = "0.1.0"
description = "Bilateral Reference for High-Resolution Dichotomous Image Segmentation"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "birefnet" }
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
torchvision = "^0.16"
opencv-python = ">=4.8.1.78,<4.9.0.0"
tqdm = "^4.66.4"
timm = "^1.0.7"
prettytable = "^3.10.0"
scipy = "^1.14.0"
scikit-image = "0.18.0"
kornia = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
